Changelog
=========

8.6-dev - (unreleased)
----------------------

8.5 - (2013-10-22)
------------------
* Upgrade step: From 'ZMI > portal_css' remove the 'screen css media' entry
  for ploneCustom.css
  [ichimdav refs #15235]
* Bug fix: Added hidden came_from input to login button in comments template,
  this allows proper redirection when logging in from the comments form
  [tiberich #17020]
* Change: Simplified layout for relatedItems for PDF export.
  [demarant refs #17108]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.design
  [ichimdav #17037]
* Feature: Added 'related items' to PDF export
  [voineali refs #17108]
* Feature: Added honeypot to subscribe portlet
  [tiberich #17013]
* Change: added code to eea-admin.js that removes the right column for history
  and version pages
  [ichimdav refs #17037]
* Feature: Added eea-admin.js registered for authenticated users
  [ichimdav refs #17037]
* Change: Set default cover image copyright within PDF export to EEA
  [voineali refs #17009]
* Bug fix: Fixed/added  missing i18n attributes most in pdf cover.
  [prospchr refs #17141]

8.4 - (2013-10-08)
------------------
* Bug fix: fixed duplication of results within the whatsnewgallery
  data-and-maps results
  [ichimdav refs #16994]
* Bug fix: fixed featured images within the portlets of the right column from
  spilling the floated text below them
  [ichimdav refs #16673]
* Bug fix: fixed float issue of relatedItems on themes dc pages
  [ichimdav]

8.3 - (2013-10-07)
------------------
* Change: check if notoc is present instead of strict equal when excluding
  headings from the TOC
  [ichimdav refs #16929]

8.2 - (2013-10-07)
------------------
* Change: removed left column from the promotion gallery on our frontpage
  [ichimdav refs #16738]
* Bug fix: Convert daviz iframes relative urls to absolute urls using
  eea.converter utility method in order to avoid restricted traverse errors
  within PDF export