@@ -18,7 +18,6 @@ html > body div#controls {
 
 html > body .slide {
   overflow: auto;
-  position: absolute;
   max-height:  69%;
 }
 
@@ -28,4 +27,17 @@ html > body .slide {
 
 iframe {
   display: block;
+}
+
+.slide h1 {
+    position: relative;
+    text-align: left;
+    padding: 0.3em 0;
+}
+
+.presentation {
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    margin-top: 3em;
 }
